--- a/reper_front/app/src/main/res/layout/fragment_boss.xml
+++ b/reper_front/app/src/main/res/layout/fragment_boss.xml
@@ -3,12 +3,129 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/boss_background"
+    android:paddingHorizontal="24dp"
+    android:elevation="0dp"
     tools:context=".ui.boss.BossFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="115dp"/>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/back_icon"
+            android:layout_width="30sp"
+            android:layout_height="30sp"
+            android:src="@drawable/baseline_arrow_back_ios_24"
+            android:layout_marginTop="60dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/white" />
+
+        <TextView
+            android:id="@+id/boss_menu"
+            style="@style/titleFontStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="60dp"
+            android:text="사장님 메뉴"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toEndOf="@+id/back_icon"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Spinner
+            android:id="@+id/store_drop_down"
+            android:layout_width="match_parent"
+            android:layout_height="52sp"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/store_list_item"
+            android:elevation="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/boss_menu" />
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/notice_write"
+            android:layout_width="107.66dp"
+            android:layout_height="107.66dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/boss_cardview"
+            android:elevation="5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/store_drop_down" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/notice_list"
+            android:layout_width="107.66dp"
+            android:layout_height="107.66dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/boss_cardview"
+            android:elevation="5dp"
+            app:layout_constraintStart_toEndOf="@+id/notice_write"
+            app:layout_constraintTop_toBottomOf="@+id/store_drop_down" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/recipe_manage"
+            android:layout_width="107.66dp"
+            android:layout_height="107.66dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/boss_cardview"
+            android:elevation="5dp"
+            app:layout_constraintStart_toEndOf="@+id/notice_list"
+            app:layout_constraintTop_toBottomOf="@+id/store_drop_down" />
+        
+        
+        <TextView
+            android:id="@+id/access"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="권한 요청 내역"
+            android:layout_marginTop="32dp"
+            android:textSize="18sp"
+            android:fontFamily="@font/pretendard_regular"
+            app:layout_constraintTop_toBottomOf="@id/notice_write"
+            app:layout_constraintStart_toStartOf="parent"/>
+        
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/access_false_list"
+            android:layout_width="match_parent"
+            android:layout_height="136dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/access"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+
+        <TextView
+            android:id="@+id/store_employee"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="우리 가게 직원"
+            android:layout_marginTop="32dp"
+            android:textSize="18sp"
+            android:fontFamily="@font/pretendard_regular"
+            app:layout_constraintTop_toBottomOf="@id/access_false_list"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/employee_list"
+            android:layout_width="match_parent"
+            android:layout_height="212dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/store_employee"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
