[feat] fonrt_bossfragment관련xml
보스에서 필요한 모든 프래그먼트 완성

--- a/reper_front/app/src/main/res/values/style.xml
+++ b/reper_front/app/src/main/res/values/style.xml
@@ -2,6 +2,7 @@
 <resources>
     <style name="titleFontStyle">
         <item name="fontFamily">@font/pretendard_semibold</item>
+        <item name="android:textColor">@color/fontblack</item>
         <item name="android:textSize">24sp</item>
     </style>
 </resources>
