--- a/reper_front/app/src/main/res/layout/fragment_boss.xml
+++ b/reper_front/app/src/main/res/layout/fragment_boss.xml
@@ -4,29 +4,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/boss_background"
-    android:paddingHorizontal="24dp"
     android:elevation="0dp"
     tools:context=".ui.boss.BossFragment">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/top_bar"
+        android:scaleType="center"
+        />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="115dp"/>
-
+</LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingHorizontal="24dp">
 
         <ImageView
-            android:id="@+id/back_icon"
+            android:id="@+id/recipe_fg_back_icon"
             android:layout_width="30sp"
             android:layout_height="30sp"
             android:src="@drawable/baseline_arrow_back_ios_24"
             android:layout_marginTop="60dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/white" />
+            android:tint="@color/bgwhite"
+        />
 
         <TextView
             android:id="@+id/boss_menu"
@@ -36,53 +42,149 @@
             android:gravity="center"
             android:layout_marginTop="60dp"
             android:text="사장님 메뉴"
-            android:textColor="@color/white"
-            app:layout_constraintStart_toEndOf="@+id/back_icon"
+            android:textColor="@color/bgwhite"
+            app:layout_constraintStart_toEndOf="@+id/recipe_fg_back_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <Spinner
-            android:id="@+id/store_drop_down"
+            android:id="@+id/boss_fg_store_spiner"
             android:layout_width="match_parent"
             android:layout_height="52sp"
             android:layout_marginTop="40dp"
-            android:background="@drawable/store_list_item"
-            android:elevation="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/boss_menu" />
-
+            android:background="@drawable/spoinner_back"
+            android:elevation="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/boss_menu"
+            tools:layout_editor_absoluteX="24dp" />
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/notice_write"
-            android:layout_width="107.66dp"
-            android:layout_height="107.66dp"
+            android:id="@+id/boss_fg_notice_write"
+            android:layout_width="107dp"
+            android:layout_height="107dp"
             android:layout_marginTop="32dp"
-            android:background="@drawable/boss_cardview"
-            android:elevation="5dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/store_drop_down" />
+            app:layout_constraintTop_toBottomOf="@+id/boss_fg_store_spiner"
+            app:cardCornerRadius="8dp"
+            android:elevation="5dp"
+            android:translationZ="5dp">
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+
+
+            <ImageView
+                android:layout_marginTop="8dp"
+                android:layout_width="47dp"
+                android:layout_height="47dp"
+                android:src="@drawable/ink_pen_24px"
+                android:tint="@color/maingreen"
+                />
+
+        <TextView
+            android:layout_marginTop="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="공지 쓰기"
+            android:textSize="16sp"
+            android:fontFamily="@font/pretendard_regular"
+            />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/notice_list"
-            android:layout_width="107.66dp"
-            android:layout_height="107.66dp"
+            android:id="@+id/boss_fg_notice_list"
+            android:layout_width="107dp"
+            android:layout_height="107dp"
             android:layout_marginTop="32dp"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/boss_cardview"
+            app:cardCornerRadius = "8dp"
             android:elevation="5dp"
-            app:layout_constraintStart_toEndOf="@+id/notice_write"
-            app:layout_constraintTop_toBottomOf="@+id/store_drop_down" />
+            android:translationZ="5dp"
+            app:layout_constraintStart_toEndOf="@+id/boss_fg_notice_write"
+            app:layout_constraintTop_toBottomOf="@+id/boss_fg_store_spiner" >
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+
+
+                <ImageView
+                    android:layout_marginTop="8dp"
+                    android:layout_width="47dp"
+                    android:layout_height="47dp"
+                    android:src="@drawable/list_alt_24px"
+                    android:tint="@color/maingreen"
+                    />
+
+                <TextView
+                    android:layout_marginTop="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="공지 내역"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/pretendard_regular"
+                    />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/recipe_manage"
-            android:layout_width="107.66dp"
-            android:layout_height="107.66dp"
+            android:id="@+id/boss_fg_recipe_manage"
+            android:layout_width="107dp"
+            android:layout_height="107dp"
             android:layout_marginTop="32dp"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/boss_cardview"
+            app:cardCornerRadius = "8dp"
             android:elevation="5dp"
-            app:layout_constraintStart_toEndOf="@+id/notice_list"
-            app:layout_constraintTop_toBottomOf="@+id/store_drop_down" />
-        
-        
+            android:translationZ="5dp"
+            app:layout_constraintStart_toEndOf="@+id/boss_fg_notice_list"
+            app:layout_constraintTop_toBottomOf="@+id/boss_fg_store_spiner" >
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+
+
+                <ImageView
+                    android:layout_marginTop="8dp"
+                    android:layout_width="47dp"
+                    android:layout_height="47dp"
+                    android:src="@drawable/menu_book_24px"
+                    android:tint="@color/maingreen"
+                    />
+
+                <TextView
+                    android:layout_marginTop="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="레시피 관리"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/pretendard_regular"
+                    />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
         <TextView
             android:id="@+id/access"
             android:layout_width="match_parent"
@@ -91,9 +193,9 @@
             android:layout_marginTop="32dp"
             android:textSize="18sp"
             android:fontFamily="@font/pretendard_regular"
-            app:layout_constraintTop_toBottomOf="@id/notice_write"
+            app:layout_constraintTop_toBottomOf="@id/boss_fg_notice_write"
             app:layout_constraintStart_toStartOf="parent"/>
-        
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/access_false_list"
             android:layout_width="match_parent"
