--- a/reper_front/app/src/main/res/layout/fragment_notice_manage.xml
+++ b/reper_front/app/src/main/res/layout/fragment_notice_manage.xml
@@ -4,54 +4,101 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginHorizontal="24dp"
+    android:background="@color/bgwhite"
     tools:context=".ui.boss.NoticeManageFragment">
     
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="24dp"
         >
-        
-        
+
+
         <ImageView
-            android:id="@+id/back_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:id="@+id/noti_fg_back_icon"
+            android:layout_width="24dp"
+            android:layout_height="28dp"
             android:src="@drawable/baseline_arrow_back_ios_24"
-            android:layout_marginTop="60dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-        
+            app:layout_constraintBottom_toBottomOf="@+id/textView"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <TextView
+            android:id="@+id/textView"
+            style="@style/titleFontStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="공지내역"
-            style="@style/titleFontStyle"
             android:layout_marginTop="60dp"
-            app:layout_constraintStart_toEndOf="@+id/back_icon"
-            app:layout_constraintTop_toTopOf="parent"/>
-        
-        
-        
-        
+            android:text="공지내역"
+            android:layout_marginLeft="16dp"
+            app:layout_constraintStart_toEndOf="@+id/noti_fg_back_icon"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
         <LinearLayout
-            android:id="@+id/search_noti"
+            android:id="@+id/recipe_fg_search_noti"
             android:layout_width="match_parent"
-            android:layout_height="53.16dp"
+            android:layout_height="53dp"
+            android:scaleType="fitXY"
+            android:orientation="horizontal"
             android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/back_icon"
-            app:layout_constraintStart_toStartOf="parent"/>
-        
-        
-        
-        
+            android:background="@drawable/search_bar"
+            app:layout_constraintTop_toBottomOf="@+id/textView">
+
+            <Spinner
+                android:id="@+id/noti_fg_spinner"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="16dp"/>
+
+
+            <EditText
+                android:id="@+id/noti_fg_search_ET"
+                android:layout_width="240dp"
+                android:layout_height="match_parent"
+                android:textSize="18sp"
+                android:background="@android:color/transparent"
+                android:hint="공지를 입력해보세요."/>
+
+
+            <ImageButton
+                android:id="@+id/noti_fg_search_btn"
+                android:layout_width="30dp"
+                android:layout_height="28dp"
+                android:src="@drawable/search_24px"
+                android:layout_gravity="center"
+                android:layout_marginRight="16dp"
+                android:backgroundTint="@color/bgwhite"
+                app:tint="@color/darkgray"
+                />
+
+
+
+        </LinearLayout>
+
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/noti_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/search_noti"/>
+            app:layout_constraintTop_toBottomOf="@+id/recipe_fg_search_noti"/>
+
+
+
+
+        <TextView
+            android:id="@+id/blank_noti_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="공지내역이 비어있습니다."
+            android:textSize="18sp"
+            android:textColor="@color/lightgray"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recipe_fg_search_noti"/>
         
         
         
