--- a/reper_front/app/src/main/res/values/themes.xml
+++ b/reper_front/app/src/main/res/values/themes.xml
@@ -2,6 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Reper" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
+        <item name="android:fontFamily">@font/pretendard_regular</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
