--- a/reper_front/app/src/main/res/layout/fragment_boss.xml
+++ b/reper_front/app/src/main/res/layout/fragment_boss.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="0dp"
+    android:background="@color/bgwhite"
     tools:context=".ui.boss.BossFragment">
 <LinearLayout
     android:layout_width="match_parent"
@@ -26,12 +27,12 @@
         <ImageView
             android:id="@+id/recipe_fg_back_icon"
             android:layout_width="30sp"
-            android:layout_height="30sp"
+            android:layout_height="28sp"
             android:src="@drawable/baseline_arrow_back_ios_24"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="62dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:tint="@color/bgwhite"
+            app:tint="@color/bgwhite"
         />
 
         <TextView
