--- a/reper_front/app/src/main/res/values/style.xml
+++ b/reper_front/app/src/main/res/values/style.xml
@@ -3,5 +3,6 @@
     <style name="styleTitle">
         <item name="fontFamily">@font/pretendard_semibold</item>
         <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#101A24</item>
     </style>
 </resources>
