--- a/reper_front/app/src/main/res/layout/fragment_notice_manage.xml
+++ b/reper_front/app/src/main/res/layout/fragment_notice_manage.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="24dp"
+        android:paddingHorizontal="40dp"
         >
 
 
@@ -54,7 +54,7 @@
 
             <EditText
                 android:id="@+id/noti_fg_search_ET"
-                android:layout_width="240dp"
+                android:layout_width="210dp"
                 android:layout_height="match_parent"
                 android:textSize="18sp"
                 android:background="@android:color/transparent"
