--- a/reper_front/app/src/main/res/layout/item_recipe.xml
+++ b/reper_front/app/src/main/res/layout/item_recipe.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="102dp"
+    android:layout_height="100dp"
     android:background="@color/bgwhite">
 
     <!-- 카드뷰 -->
@@ -28,18 +28,20 @@
             android:paddingBottom="8dp">
 
             <!-- 레시피 이미지 -->
+
+            <!-- 날짜 텍스트 -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/recipe_img"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:background="@color/darkgray"
+                app:cardBackgroundColor="@color/lightgray"
                 android:elevation="8dp"
                 app:cardCornerRadius="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.571" />
 
-            <!-- 날짜 텍스트 -->
             <TextView
                 android:id="@+id/recpe_add_date_TV"
                 android:layout_width="wrap_content"
@@ -74,11 +76,11 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/cancel_24px"
-                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/lightgray" />
+                tools:ignore="UseAppTint"
+                android:tint="@color/lightgray" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
