--- a/reper_front/app/src/main/res/layout/fragment_notice_manage.xml
+++ b/reper_front/app/src/main/res/layout/fragment_notice_manage.xml
@@ -79,9 +79,12 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/noti_list"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
+            android:scrollbars="vertical"
+            android:scrollbarFadeDuration="0"
+            android:scrollbarThumbVertical="@drawable/scroll_bar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recipe_fg_search_noti"/>
 
