--- a/reper_front/app/src/main/res/layout/fragment_recipe_manage.xml
+++ b/reper_front/app/src/main/res/layout/fragment_recipe_manage.xml
@@ -85,7 +85,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/recipe_fg_search_noti"
-            tools:layout_editor_absoluteX="24dp" />
+            tools:layout_editor_absoluteX="24dp"
+            android:scrollbars="vertical"
+            android:scrollbarFadeDuration="0"
+            android:scrollbarThumbVertical="@drawable/scroll_bar"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
