--- a/reper_front/app/src/main/res/layout/item_noti.xml
+++ b/reper_front/app/src/main/res/layout/item_noti.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/bgwhite"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="78dp"
+    android:background="@color/bgwhite">
 
     <androidx.cardview.widget.CardView
 
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="70dp"
+        android:layout_marginEnd="8dp"
         android:elevation="5dp"
-        android:translationZ="5dp"
+        android:translationZ="1dp"
         app:cardCornerRadius="8dp"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,12 +20,12 @@
         android:id="@+id/noti_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
         android:elevation="8dp"
+        android:layout_marginTop="16dp"
         android:text="🌟공지제목이 들어갈 예정입니다"
         android:textColor="@color/fontblack"
-        android:layout_marginLeft="16dp"
         android:textSize="18dp"
-        app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,17 +34,13 @@
         android:id="@+id/noti_item_upload_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="4dp"
         android:elevation="8dp"
-        android:layout_margin="12dp"
         android:text="게시시간"
         android:textColor="@color/lightgray"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/cardView" />
-
-
-
-
-
+        app:layout_constraintEnd_toEndOf="@+id/cardView"
+        app:layout_constraintTop_toBottomOf="@+id/noti_item_title" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
